apps/intel-gpu/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: intel
  labels:
    goldilocks.fairwinds.com/enabled: "true"
